Notebooks index overflow fix

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -82,9 +82,11 @@ body {
 }
 
 .notebooks-index-container {
+  background-color: white;
   padding-left: 30px;
   padding-right: 30px;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   position: relative;
   width: 100%;
 
@@ -95,6 +97,10 @@ body {
     line-height: 80px;
     min-height: 80px;
   }
+}
+
+.notebooks-table {
+  overflow-x: hidden;
 }
 
 .notebooks-index-header-container {
@@ -149,6 +155,7 @@ body {
   li {
     margin-left: 20px;
     width: 130px;
+    overflow-x: hidden;
 
     &:last-child {
       text-align: right;
@@ -176,6 +183,7 @@ body {
     font-weight: 300;
     line-height: 21px;
     margin-left: 20px;
+    min-width: 130px;
     padding: 0;
     width: 130px;
     text-align: left;    
